replaced deleted application.scss

--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,2 +1,4 @@
 <h1>Welcome#contact</h1>
 <p>Find me in app/views/welcome/contact.html.erb</p>
+#https://www.facebook.com/henry.j.archer.5
+<%= link_to "Follow me", "https://www.facebook.com/henry.j.archer.5", class: "social-btn" %>
