--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -4,6 +4,19 @@
 h1 {
   color:  red;
 }
+.social-btn {
+  background: white;
+  text-align: center;
+  font-size: 25px;
+  color: gold;
+  border-style: solid;
+  border-width: 1px;
+  margin: 5px 5px 5px 5px;
+  padding: 25px 25px 25px 25px;
+  height: 20px;
+  width: 45px;
+
+}
 p#index-title {
     text-align: center;
     font-size: 15px;
