--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Welcome to Bloccit</h1>
-<p id="index-title">This is the home page for Bloccit.</p>
+
+<%= link_to "Follow me", "http://www.facebook.com/trybloc", class: "social-btn" %>
 
 
