--- a/app/views/advertisements/index.html.erb
+++ b/app/views/advertisements/index.html.erb
@@ -1,6 +1,5 @@
-<h1>Advertisements/h1>
-<% @advertisement.each do |advertisement|
-  <p><%= link_to avertisement.title, advertisement %></p>
+<h1>New Advertisements</h1>
+  <% @advertisements.each do |advertisement| %>
   <div class="media">
     <div class="media-body">
       <h4 class="media-heading">
@@ -8,4 +7,4 @@
       </h4>
     </div>
   </div>
-<% end %>
+<%end%>
